tests/compile_fail/derive_payload_unknown_check_qualified.stderr
error[E0599]: no variant or associated item named `nonexistent_check` found for enum `MetricCheck` in the current scope
  --> tests/compile_fail/derive_payload_unknown_check_qualified.rs:14:24
   |
14 | #[default_check(MetricCheck::nonexistent_check("metric", 1.0))]
   |                        ^^^^^^^^^^^^^^^^^ variant or associated item not found in `MetricCheck`
   |
note: if you're trying to build a new `MetricCheck` consider using one of the following associated functions:
      MetricCheck::min
      MetricCheck::max
      MetricCheck::range
      MetricCheck::exists
      MetricCheck::exit_code_eq
  --> src/test_support/payload.rs
   |
   |     pub const fn min(metric: &'static str, value: f64) -> MetricCheck {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn max(metric: &'static str, value: f64) -> MetricCheck {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn range(metric: &'static str, lo: f64, hi: f64) -> MetricCheck {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn exists(metric: &'static str) -> MetricCheck {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn exit_code_eq(expected: i32) -> MetricCheck {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
